--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/blueberry-yoghurt-cake.html">Blueberry Yoghurt Cake</a>
     </body>
-    
+
 </html>
