Add image and headers
- Add jpg image from the web with src
- Include appropriate alt for screen reader use
- Add <h2> headers to body as smaller than recipe name <h1>

--- a/recipes/blueberry-yoghurt-cake.html
+++ b/recipes/blueberry-yoghurt-cake.html
@@ -7,5 +7,15 @@
 
     <body>
         <h1>Blueberry and Yoghurt Cake</h1>
+
+        <img src="https://cdn.donnahaycdn.com.au/images/content-images/blueberry-and-yoghurt-loaf.jpg" alt="A photo of a moist loaf cake dusted with icing sugar on a wooden table. A butter knife sits beside it. Slices of cake show that is dappled with blueberries.">
+
+        <h2>Description</h2>
+        <p></p>
+
+        <p><h2>Ingredients</h2></p>
+
+        <p><h2>Method</h2></p>
+
     </body>
 </html>
