Fix lists and add syntax
- Add content under descr., ingredients, method.
- Use <ul> and <ol> for ing. and method. Test in browser.
- Fix lists with <li> to make sure they are read vertically.
- Use <em> for description to differentiate from rest of text.
- Use <strong> on method to highlight important timing information.

--- a/recipes/blueberry-yoghurt-cake.html
+++ b/recipes/blueberry-yoghurt-cake.html
@@ -11,11 +11,37 @@
         <img src="https://cdn.donnahaycdn.com.au/images/content-images/blueberry-and-yoghurt-loaf.jpg" alt="A photo of a moist loaf cake dusted with icing sugar on a wooden table. A butter knife sits beside it. Slices of cake show that is dappled with blueberries.">
 
         <h2>Description</h2>
-        <p></p>
+        <p><em>Taken from Donna Hay's original masterpiece, this gorgeous loaf cake has become a family favourite and
+            a staple for gatherings and get-togethers, no matter the occassion. Made moist and light with Greek yoghurt,
+            this easy, one-bowl recipe is perfect for bakers of all levels.</em>
+        </p>
 
         <p><h2>Ingredients</h2></p>
+        <p>You will need... <ul>
+            <li>150g unsalted / lightly salted butter, melted</li>
+            <li>220g caster sugar</li>
+            <li>thick Greek yoghurt</li>
+            <li>2 eggs</li>
+            <li>1tsp vanilla extract</li>
+            <li>lemon zest, finely grated</li>
+            <li>225g self-raising flour, sifted</li>
+            <li>fresh blueberries</li>
+        </ul></p>
+        
 
         <p><h2>Method</h2></p>
+        <p><ol>
+            <li>Measure out and begin to melt the butter on a low-medium heat.</li>
+            <li>Meanwhile, place sugar, yoghurt, eggs, zest and vanilla extract into a bowl. Add the
+                melted butter and whisk to combine (don't overdo it!).</li>
+            <li>Add the flour (using a sieve) and whisk until well-combined.</li>
+            <li>Gently fold the blueberries into the mixture before transferring it into a lightly greased
+                loaf tin lined with greaseproof paper. Smooth the surface and <strong>bake for 1 hour</strong>
+                or until top is golden and a skewer comes out clean.
+            </li>
+            <li>Allow to <strong>cool for 10 minutes</strong> before removing the cake from the tin. Dust with
+            icing sugar to serve.</li>
+        </ol></p>
 
     </body>
 </html>
