--- a/recipes/blueberry-yoghurt-cake.html
+++ b/recipes/blueberry-yoghurt-cake.html
@@ -20,12 +20,12 @@
         <p>You will need... <ul>
             <li>150g unsalted / lightly salted butter, melted</li>
             <li>220g caster sugar</li>
-            <li>thick Greek yoghurt</li>
+            <li>Thick Greek yoghurt</li>
             <li>2 eggs</li>
             <li>1tsp vanilla extract</li>
-            <li>lemon zest, finely grated</li>
+            <li>Lemon zest, finely grated</li>
             <li>225g self-raising flour, sifted</li>
-            <li>fresh blueberries</li>
+            <li>Fresh blueberries</li>
         </ul></p>
         
 
