--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/blueberry-yoghurt-cake.html">Blueberry Yoghurt Cake</a>
+        <ul>
+            <li><a href="recipes/blueberry-yoghurt-cake.html">Blueberry Yoghurt Cake</a></li>
+            <li><a href="recipes/butterfly-cupcakes.html">Beautiful Butterfly Cupcakes</a></li>
+            <li><a href="recipes/chilli-prawn-spaghetti.html">Holly's Sublime Spaghetti</a></li>
+            <li><a href="recipes/nannas-pastry.html">Nanna's Pastry Recipe</a></li>
+        </ul>
+
     </body>
 
 </html>
