--- a/recipes/nannas-pastry.html
+++ b/recipes/nannas-pastry.html
@@ -8,5 +8,7 @@
 
     <body>
         <h1>Nanna's Pastry Recipe</h1>
+        <img src="https://images.unsplash.com/photo-1512685076844-4161e436c4f5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="
+        Uncooked pasties on a marbled kitchen counter covered in flour. A rolling pin sits beside them.">
     </body>
 </html>
