Write body of new recipe III
 - Note quantities written in oz and not grams - to be updated?
 - Write body of 'Nanna's Pastry Recipe'
 - Use <em> to signify personal comments/train of thought
- Use <ul> for ingredients as no specific order
- Use <ol> for method so that it is followed in the correct order
- Use <strong> in method to highlight important timings

--- a/recipes/nannas-pastry.html
+++ b/recipes/nannas-pastry.html
@@ -10,5 +10,29 @@
         <h1>Nanna's Pastry Recipe</h1>
         <img src="https://images.unsplash.com/photo-1512685076844-4161e436c4f5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="
         Uncooked pasties on a marbled kitchen counter covered in flour. A rolling pin sits beside them.">
+
+        <p><h2>Description</h2></p>
+
+
+        <p><h2>Ingredients</h2></p>
+        <p> You will need...<ul>
+            <li>8oz plain flour</li>
+            <li>4oz butter OR 2oz margarine and 2oz TREX (vegetable fat)</li>
+            <li>1 egg</li>
+            <li>A little salt, to taste</li>
+        </ul></p>
+
+        <p><h2>Method</h2></p>
+        <p><ol>
+            <li>Crack your egg into a small bowl, add a little water and beat with a fork.</li>
+            <li>Mix your chosen fat with the plain flour and a little salt. Make a well in the middle add
+                pour in your egg mixture. Mix into a ball.
+            </li>
+            <li>Once in a ball, wrap your pastry in greaseproof paper (or clingfilm!) and pop it in the fridge
+                for <strong>30 minutes.</strong>
+            </li>
+            <li>Now you're ready to start rolling!</li>
+        </ol></p>
+
     </body>
 </html>
