Add CSS to project - COMMIT ONE
- Reduce image size on recipe page: didn't work?
- Add border around ingredients section: didn't work?
- FIX: Add 'type = "text/css" ' to CSS link (Googled)
- Make border blue; reflects specific recipe (ie BLUEberry)
- Add border around method; top currently merges with ing border bottom
- Change font-family to monospace; handwritten feel. Monca w fallback
- Use columns on homepage; distinguish recipes, room for thumbnails?
- TO FIX: merged borders
- TO ADD: 'Go Back' button on each recipe page; improve functionality
- TO ADD: Homepage header; visual appeal, immediate 'product' indication

--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>randomkidrecipes</title>
+        <link rel="stylesheet" href="styles.css"/>
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
+        <p><i>Welcome to Odin Recipes! This is your one stop shop for all 
+        things delicious, be it sweet or savoury, breakfast, lunch or dinner.</i></p>
+        <p><i>My name is Holly, and I take recipes from my life and share them with
+        the internet! This compilation of recipes is inspired by some of my most vivid
+        and important memories; my butterfly cupcakes take me back to my Nanna's kitchen,
+        while the blueberry yoghurt cake is a firm favourite at family gatherings.
+        </i></p>
+        <ul class="unorderedhome">
             <li><a href="recipes/blueberry-yoghurt-cake.html">Blueberry Yoghurt Cake</a></li>
             <li><a href="recipes/butterfly-cupcakes.html">Beautiful Butterfly Cupcakes</a></li>
             <li><a href="recipes/chilli-prawn-spaghetti.html">Holly's Sublime Spaghetti</a></li>
