--- a/recipes/blueberry-yoghurt-cake.html
+++ b/recipes/blueberry-yoghurt-cake.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>blueberry and yoghurt cake</title>
+        <link rel="stylesheet" type="text/css" href="recipestyles.css"/>
     </head>
 
     <body>
         <h1>Blueberry and Yoghurt Cake</h1>
 
-        <img src="https://cdn.donnahaycdn.com.au/images/content-images/blueberry-and-yoghurt-loaf.jpg" alt="A photo of a moist loaf cake dusted with icing sugar on a wooden table. A butter knife sits beside it. Slices of cake show that is dappled with blueberries.">
+        <img src="https://cdn.donnahaycdn.com.au/images/content-images/blueberry-and-yoghurt-loaf.jpg" id="bloobyoghurt" alt="A photo of a moist loaf cake dusted with icing sugar on a wooden table. A butter knife sits beside it. Slices of cake show that is dappled with blueberries.">
 
         <h2>Description</h2>
         <p><em>Taken from Donna Hay's original masterpiece, this gorgeous loaf cake has become a family favourite and
@@ -16,32 +17,35 @@
             this easy, one-bowl recipe is perfect for bakers of all levels.</em>
         </p>
 
-        <p><h2>Ingredients</h2></p>
-        <p>You will need... <ul>
-            <li>150g unsalted / lightly salted butter, melted</li>
-            <li>220g caster sugar</li>
-            <li>Thick Greek yoghurt</li>
-            <li>2 eggs</li>
-            <li>1tsp vanilla extract</li>
-            <li>Lemon zest, finely grated</li>
-            <li>225g self-raising flour, sifted</li>
-            <li>Fresh blueberries</li>
-        </ul></p>
+        <div class="bloobingredients"><h2>Ingredients</h2>
+            <p>You will need... <ul>
+                <li>150g unsalted / lightly salted butter, melted</li>
+                <li>220g caster sugar</li>
+                <li>Thick Greek yoghurt</li>
+                <li>2 eggs</li>
+                <li>1tsp vanilla extract</li>
+                <li>Lemon zest, finely grated</li>
+                <li>225g self-raising flour, sifted</li>
+                <li>Fresh blueberries</li>
+            </ul></p>
+        </div>    
         
 
-        <p><h2>Method</h2></p>
-        <p><ol>
-            <li>Measure out and begin to melt the butter on a low-medium heat.</li>
-            <li>Meanwhile, place sugar, yoghurt, eggs, zest and vanilla extract into a bowl. Add the
-                melted butter and whisk to combine (don't overdo it!).</li>
-            <li>Add the flour (using a sieve) and whisk until well-combined.</li>
-            <li>Gently fold the blueberries into the mixture before transferring it into a lightly greased
-                loaf tin lined with greaseproof paper. Smooth the surface and <strong>bake for 1 hour</strong>
-                or until top is golden and a skewer comes out clean.
-            </li>
-            <li>Allow to <strong>cool for 10 minutes</strong> before removing the cake from the tin. Dust with
-            icing sugar to serve.</li>
-        </ol></p>
+        <div class="bloobmethod">
+            <p><h2>Method</h2></p>
+            <p><ol>
+                <li>Measure out and begin to melt the butter on a low-medium heat.</li>
+                <li>Meanwhile, place sugar, yoghurt, eggs, zest and vanilla extract into a bowl. Add the
+                    melted butter and whisk to combine (don't overdo it!).</li>
+                <li>Add the flour (using a sieve) and whisk until well-combined.</li>
+                <li>Gently fold the blueberries into the mixture before transferring it into a lightly greased
+                    loaf tin lined with greaseproof paper. Smooth the surface and <strong>bake for 1 hour</strong>
+                    or until top is golden and a skewer comes out clean.
+                </li>
+                <li>Allow to <strong>cool for 10 minutes</strong> before removing the cake from the tin. Dust with
+                icing sugar to serve.</li>
+            </ol></p>
+        </div>
 
     </body>
 </html>
