--- a/recipes/nannas-pastry.html
+++ b/recipes/nannas-pastry.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>nanna's pastry recipe</title>
+        <link rel="stylesheet" type="text/css" href="recipestyles.css"/>
     </head>
 
     <body>
@@ -11,7 +12,21 @@
         <img src="https://images.unsplash.com/photo-1512685076844-4161e436c4f5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="
         Uncooked pasties on a marbled kitchen counter covered in flour. A rolling pin sits beside them.">
 
-        <p><h2>Description</h2></p>
+        <p><h2>Description</h2></p><p>Be it Christmas, Easter or a gathering with no occassion, it is rare that my Nanna
+        turns up to a family get together empty handed - and boy do our eyes light up when she whips out the recycled
+        tub of Jacobs Cream Crackers. For inside that orange box often lie everyone's favourite snack; her sausage rolls.</p>
+        <p>Now, these aren't any sausage rolls. They don't even try to rival the mighty Gregg's number (rather, they
+        don't try and copy her) with their flakey pastry. Nanna's sausage rolls are a a buttery, shortcrust delight,
+        crumbly and deliciously moreish. The same pastry recipe is used for her fruit-filled pies and savoury
+        pasties - though you'd never think it, somehow. This diversity is the reason why I aim to master this recipe,
+        and why I've shared it with you!
+        </p>
+        <p>You'll see that I've listed a few fats in the ingredients below - Nanna usually opts for a mixture of half
+        TREX (a vegetable fat) and margarine, but I'd personally tend to stick with just butter (purely out of ease and
+        perhaps the resaon that mine never tastes quite the same). Feel free to experiment and use whichever you prefer;
+        either way, you'll end up with 4oz of fat in your mixture.
+        </p>
+
 
 
         <p><h2>Ingredients</h2></p>
