--- a/recipes/butterfly-cupcakes.html
+++ b/recipes/butterfly-cupcakes.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>beautiful butterfly cupcakes</title>
+        <link rel="stylesheet" type="text/css" href="recipestyles.css"/>
     </head>
 
     <body>
