--- a/recipes/chilli-prawn-spaghetti.html
+++ b/recipes/chilli-prawn-spaghetti.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>holly's sublime spaghetti</title>
+        <link rel="stylesheet" type="text/css" href="recipestyles.css"/>
     </head>
 
     <body>
