Add CSS to project - COMMIT TWO
- Add description to pastry recipe; each recipe has description
- Add image to main homepage; download and save in folder. Give alt
- Resize homepage image; ideally change to header later (width of page)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <img src="./images/bananabread-home-header.jpg" id="bananabread" alt="Chocolate chip banana bread on a cooling rack,
+        sliced and ready to be eaten. Topped with pecans. A pair of bananas lie in the background, ready for another batch.">
+
+
         <p><i>Welcome to Odin Recipes! This is your one stop shop for all 
         things delicious, be it sweet or savoury, breakfast, lunch or dinner.</i></p>
         <p><i>My name is Holly, and I take recipes from my life and share them with
