- Re-save images in respective folder for easy src - Add relevant images to homepage; visual, relevance - Resize homepage recipe images; prep for buttons - Use same initial dimensions for images - consistency - Remove column structure; redo with box mod?

--- a/index.html
+++ b/index.html
@@ -21,10 +21,19 @@
         while the blueberry yoghurt cake is a firm favourite at family gatherings.
         </i></p>
         <ul class="unorderedhome">
-            <li><a href="recipes/blueberry-yoghurt-cake.html">Blueberry Yoghurt Cake</a></li>
-            <li><a href="recipes/butterfly-cupcakes.html">Beautiful Butterfly Cupcakes</a></li>
-            <li><a href="recipes/chilli-prawn-spaghetti.html">Holly's Sublime Spaghetti</a></li>
-            <li><a href="recipes/nannas-pastry.html">Nanna's Pastry Recipe</a></li>
+            <li><a href="recipes/blueberry-yoghurt-cake.html">Blueberry Yoghurt Cake</a>
+                <img src="https://cdn.donnahaycdn.com.au/images/content-images/blueberry-and-yoghurt-loaf.jpg" id="homepageimage" alt="A photo of a moist loaf cake dusted with icing sugar on a wooden table. A butter knife sits beside it. Slices of cake show that is dappled with blueberries."></li>
+            <li><a href="recipes/butterfly-cupcakes.html">Beautiful Butterfly Cupcakes</a>
+                <img src="./recipes/images/Butterfly-Cakes-5.jpeg" id="homepageimage" alt="Three small cupcakes sit on a white surface. Their tops have been removed,
+        and the space missing is filled with a cream-coloured buttercream. The tops hve been halved and sit on
+        top to create wings. Each cake is lightly dusted with icing sugar."></li>
+            <li><a href="recipes/chilli-prawn-spaghetti.html">Holly's Sublime Spaghetti</a>
+                <img src="./recipes/images/garlic-prawn-pasta-09.jpeg" id="homepageimage" alt="A plate of spaghetti with large prawns. The dish is garnished with chilli flakes,
+                parsley and finely grated Parmesan cheese. A slice of lemon has been quarted; two quarters sit on the
+                edge of the plate."></li>
+            <li><a href="recipes/nannas-pastry.html">Nanna's Pastry Recipe</a>
+                <img src="./recipes/images/nannapastry.avif" id="homepageimage" alt="
+                Uncooked pasties on a marbled kitchen counter covered in flour. A rolling pin sits beside them."></li>
         </ul>
 
     </body>
