- Add back button to each recipe using <button> el - Button not yet functioning; add link? - Add 'column-count' to index styles; nicer layout, less scrolling down - Change button content to 'Home' - Border on blueberry cake ugly; no margin - Change border colour to grey and add 20px bottom-margin

--- a/recipes/blueberry-yoghurt-cake.html
+++ b/recipes/blueberry-yoghurt-cake.html
@@ -47,5 +47,10 @@
             </ol></p>
         </div>
 
+        <div>
+            <button class="back-button">Home</button>
+        </div>
+    
+
     </body>
 </html>
