--- a/recipes/butterfly-cupcakes.html
+++ b/recipes/butterfly-cupcakes.html
@@ -53,5 +53,10 @@
                 butterfly wings!
             </li>
         </ol></p>
+
+        <div>
+            <button class="back-button">Home</button>
+        </div>
+
     </body>
 </html>
