--- a/recipes/chilli-prawn-spaghetti.html
+++ b/recipes/chilli-prawn-spaghetti.html
@@ -47,4 +47,9 @@
             </li>
         </ol></p>
     </body>
+
+    <div>
+        <button class="back-button">Home</button>
+    </div>
+
 </html>
