--- a/recipes/nannas-pastry.html
+++ b/recipes/nannas-pastry.html
@@ -49,5 +49,9 @@
             <li>Now you're ready to start rolling!</li>
         </ol></p>
 
+        <div>
+            <button class="back-button">Home</button>
+        </div>
+
     </body>
 </html>
